--- a/ChatRoomMain/ChatRoomMain.csproj
+++ b/ChatRoomMain/ChatRoomMain.csproj
@@ -135,7 +135,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Heads\welcome back.jpg" />
+    <Resource Include="Heads\welcomeback.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
