--- a/ChatRoomMain/App.config
+++ b/ChatRoomMain/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IChatRoomSe1rvices" />
+                <binding name="BasicHttpsBinding_IChatRoomSe1rvices">
+                    <security mode="Transport" />
+                </binding>
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://ourchatroom.azurewebsites.net/ChatRoomServices.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IChatRoomSe1rvices"
+                contract="ChatRoomServices.IChatRoomSe1rvices" name="BasicHttpBinding_IChatRoomSe1rvices" />
+            
+        </client>
+    </system.serviceModel>
 </configuration>
