--- a/ChatRoomMain/ChatRoomMain.csproj
+++ b/ChatRoomMain/ChatRoomMain.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -70,6 +72,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Service References\ChatRoomServices\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Page Include="ChatRoom.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -113,6 +120,16 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Service References\ChatRoomServices\ChatRoomServices.wsdl" />
+    <None Include="Service References\ChatRoomServices\ChatRoomServices.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ChatRoomServices\ChatRoomServices1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ChatRoomServices\ChatRoomServices2.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -161,6 +178,27 @@
       <Project>{66551679-8129-4730-9f97-e8efc44930f3}</Project>
       <Name>ChatRoom</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ChatRoomServices\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ChatRoomServices\ChatRoomServices.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ChatRoomServices\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ChatRoomServices\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ChatRoomServices\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
