--- a/ChatRoomMain/ChatRoomMain.csproj
+++ b/ChatRoomMain/ChatRoomMain.csproj
@@ -162,6 +162,9 @@
       <Name>ChatRoom</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Heads\ChatFrame.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
